# vmaf-gui

./: Cargo.toml  package-lock.json  package.json  readme.md  tailwind.config.js  tsconfig.json
.github/: stale.yml
.github/workflows/: codeql-analysis.yml
frontend/: next.config.js  package-lock.json  package.json
legacy/: LICENSE  vmaf-gui.sln
legacy/vmaf-gui/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  results.cs  vmaf-gui.csproj
legacy/vmaf-gui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
src/: App.tsx  lib.rs  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: format.rs  main.rs  video.rs
src/atoms/: model.tsx  pixFormat.tsx  resolution.tsx  videos.tsx
src/components/index/: fileSelect.tsx  form.tsx  header.tsx  modelSelect.tsx  pixelFormatSelect.tsx  resolutionOption.tsx  resolutionSelect.tsx
src/pages/: _app.tsx  index.tsx
vmaf-gui/: Form1.Designer.cs  Form1.cs  Form1.resx  ReadXML.cs  results.Designer.cs  results.cs  vmaf-gui.csproj
vmaf-gui/Properties/: Resources.Designer.cs  Settings.Designer.cs
